2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	The openbsd compat library is no longer used.
	* image/epdf.h, lua/luainit.w, ptexlib.h, utils/utils.w:
	Drop #include "openbsd-compat.h".
	* am/libluatex.am, am/luatex.am: Remove OBSDCOMPAT_*.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (parse_options): Avoid cast const => non-const.

2012-09-13  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* lua/luainit.w (parse_options): allow lualatex "\input" "a b" on
	Windows.

2012-09-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex-api.h: Avoid conflicting extern declaration of environ,
	declared in <stdlib.h> for WIN32 (from W32TeX).

2012-08-21  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* tex/texdeffont.w (tex_def_font): Recover the old code, because the
	new code seems not to work.

2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexlib.h: Drop unused definition of M_PI.

2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/dumpdata.h: Remove the swap_items() prototype.
	* luatex.c (swap_items): Moved from here ...
	* tex/texfileio.w (swap_items): ... to here and declared static.

	* luatex.c (input_line) [WIN32]: Sync with ../lib/texmfmp.c.
	Detect and skip Byte order marks.
	* tex/texfileio.[ch] [WIN32]: Use Poptr to record pipe input.

2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch] [W32TeX]: Use DLLPROC for luatex.dll.
	* pdf/pdfgen.w [WIN32]: Convert file names '\\' -> '/'.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texdeffont.w (tex_def_font): Better tracing of font
	definitions, adapted from e-TeX version 2.5.

2012-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfpage.w (print_pdffloat): Cope with broken snprintf().
	* lua/luastuff.w (luatex_error): Drop snprintf() return value.

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (lua_initialize): Avoid using asprintf().
	* utils/utils.w (initversionstring): Avoid using asprintf().
